# jevoisextra

./: .gitignore  README.md  rebuild-all.sh
Contrib/: README.txt  reinstall.sh  yolo2_light.patch
facedetector/: CMakeLists.txt  download-dlib.sh  rebuild-host.sh  rebuild-platform.sh  rebuild-pro-host.sh  rebuild-pro-platform-pdeb.sh  rebuild-pro-platform.sh
facedetector/src/Modules/FaceDetector/: FaceDetector.C  postinstall
libjvdmtx/: CMakeLists.txt  rebuild-host.sh  rebuild-platform.sh  rebuild-pro-host.sh  rebuild-pro-platform-pdeb.sh
yololight/: CMakeLists.txt  rebuild-pro-platform.sh
yololight/share/darknet/yololight/cfg/: coco.data
yololight/src/Modules/YoloLight/: YoloLight.C  postinstall
